Examples/Networking/service.yaml
# 🔌 Service Örnekleri

```yaml
# [TİP 1] ClusterIP - Sadece Cluster içi erişim
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
# [TİP 2] NodePort - Dışardan erişim (NodeIP:30080)
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
---
# [TİP 3] LoadBalancer - Cloud platformlar için
apiVersion: v1
kind: Service
metadata:
  name: public-lb
  annotations:
    # Cilium L2 Announcement (MetalLB alternatifi)
    lbipam.cilium.io/ips: "192.168.1.200"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
```
